--- a/style.css
+++ b/style.css
@@ -120,6 +120,9 @@ footer h3 {
 .sobre-mim {
     margin-left: 20px;
 }
+.sobre-mim img {
+    border-radius: 50%;
+}
 #video{
     width: 100%;
     height: 800px;
